# llvm-mingw

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.cross  Dockerfile.dev  Dockerfile.pgo  Dockerfile.profile  Dockerfile.system-clang  Dockerfile.toolchain  LICENSE.txt  Makefile  README.md  build-all.sh  build-busybox.sh  build-compiler-rt.sh  build-cross-tools.sh  build-flang-rt.sh  build-flang-runtime.sh  build-libcxx.sh  build-libssp.sh  build-lldb-mi.sh  build-llvm.sh  build-make.sh  build-mingw-w64-libraries.sh  build-mingw-w64-tools.sh  build-mingw-w64-widl.sh  build-mingw-w64-winpthreads.sh  build-mingw-w64.sh  build-musl.sh  build-openmp.sh  build-python.sh  copy-msys-dependencies.sh  docker-build-pgo.sh  extract-docker.sh  hello-exception.cpp  hello-tls.c  hello.cpp  install-definitions.sh  install-linux-headers.sh  install-wrappers.sh  (+18 more)
hello/: hello-tls.c  hello.c  hello.cpp
patches/: clang-0001.patch  (+34 more)
test/: .gitignore  CMakeLists.txt  Makefile  atomic-helpers.c  atomic-load-sizes.cpp  atomic-load-store.c  autoimport-lib.c  autoimport-lib.h  autoimport-main.c  bufferoverflow.c  cfguard-test.c  crt-test.c  exception-catch-ptr-ref.cpp  exception-locale.cpp  exception-reduced.cpp  global-terminate.cpp  hello-cpp.cpp  hello-exception.cpp  hello-omp.c  hello-res-rc.rc  hello-res.c  hello-res.h  hello-tls.c  hello.c  idltest.c  idltest.idl  longjmp-cleanup.cpp  setjmp.c  stacksmash.c  tchar.c  test-scan-deps.cpp  test.rc  throwcatch-lib.cpp  throwcatch-lib.h  throwcatch-main.cpp  tlstest-lib.cpp  tlstest-main.cpp  ubsan.c  uwp-error.c  winrt-error.c
(+151 files in other folders)
